kubernetes/apps/longhorn/longhorn-system/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    hajimari.io/appName: Longhorn
    hajimari.io/icon: clarity:hard-drive-disks-solid
spec:
  ingressClassName: nginx
  rules:
    - host: &host longhorn.vanillax.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
